--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -14,15 +14,23 @@
 <td>fnCreateNewAccoount</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
+<td>&nbsp;</td>
+<td>printdata</td>
+<td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
+<td>&nbsp;</td>
+<td>fnRegisterNewUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>fnLaunchBrowser</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
