--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">166,516</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,761</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">framework.javaframework.MyStoresTest</td><td><a href="#m0">fnRegisterNewUser</a></td><td rowspan="1">1598983949922</td><td rowspan="1">59667</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">framework.javaframework.MyStoresTest</td><td><a href="#m1">fnCreateNewAccoount</a></td><td rowspan="1">1598983920394</td><td rowspan="1">29349</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">framework.javaframework.MyStoresTest</td><td><a href="#m0">fnCreateNewAccoount</a></td><td rowspan="1">1599496510348</td><td rowspan="1">6724</td></tr><tr class="passedeven"><td><a href="#m1">printdata</a></td><td rowspan="1">1599496518167</td><td rowspan="1">12647</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">framework.javaframework.MyStoresTest#fnRegisterNewUser</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>FIRSTTES</td><td>LASTTEST</td><td>Tester12!</td><td>20</td><td>May</td><td>1993</td></tr><tr><th colspan="6">Exception</th></tr><tr><td colspan="6"><div class="stacktrace">java.lang.ClassCastException: class java.util.ArrayList cannot be cast to class org.openqa.selenium.WebElement (java.util.ArrayList is in module java.base of loader &apos;bootstrap&apos;; org.openqa.selenium.WebElement is in unnamed module of loader &apos;app&apos;)
-	at resuableMethods.HelperMethods.SelectDropdwonByValue(HelperMethods.java:67)
-	at framework.javaframework.MyStoresTest.fnRegisterNewUser(MyStoresTest.java:88)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">framework.javaframework.MyStoresTest#fnCreateNewAccoount</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>aramacha@test.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">framework.javaframework.MyStoresTest#fnCreateNewAccoount</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>aramacha@test.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">framework.javaframework.MyStoresTest#printdata</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th></tr><tr class="param stripe"><td>aramacha@test.com</td><td>Anbarasu</td><td>R</td><td>aramacha@test.com</td><td>Male</td><td>20</td><td>May</td><td>1993</td><td>Tester12!</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
