--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb6bea">  <td>20/09/01 10:27:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyStoresTest.closeBrowsers()[pri:0, instance:framework.javaframework.MyStoresTest@1ffe63b9]">&lt;&lt;closeBrowsers</td> 
+<tr bgcolor="a7c69f">  <td>20/09/05 19:22:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyStoresTest.closeBrowsers()[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&lt;&lt;closeBrowsers</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="bb6bea">  <td>20/09/01 10:27:39</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.fnCreateNewAccoount(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@1ffe63b9]">fnCreateNewAccoount</td> 
-  <td>main@1516500233</td>   <td></td> </tr>
-<tr bgcolor="bb6bea">  <td>20/09/01 10:27:39</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyStoresTest.fnLaunchBrowser(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@1ffe63b9]">&gt;&gt;fnLaunchBrowser</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a7c69f">  <td>20/09/05 19:22:42</td>   <td>-612</td> <td title="&gt;&gt;MyStoresTest.fncreateTestReultFolder()[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&gt;&gt;fncreateTestReultFolder</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@288994035</td>   <td></td> </tr>
 </table>
