--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a0b76e">  <td>20/09/01 23:44:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyStoresTest.closeBrowsers()[pri:0, instance:framework.javaframework.MyStoresTest@5e316c74]">&lt;&lt;closeBrowsers</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1691185247</td>   <td></td> </tr>
-<tr bgcolor="a0b76e">  <td>20/09/01 23:42:00</td>   <td>-128224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.fnCreateNewAccoount(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@5e316c74]">fnCreateNewAccoount</td> 
-  <td>main@1691185247</td>   <td></td> </tr>
-<tr bgcolor="a0b76e">  <td>20/09/01 23:41:32</td>   <td>-155999</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyStoresTest.fnLaunchBrowser(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@5e316c74]">&gt;&gt;fnLaunchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1691185247</td>   <td></td> </tr>
-<tr bgcolor="a0b76e">  <td>20/09/01 23:42:29</td>   <td>-98696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.fnRegisterNewUser(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String, java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@5e316c74]">fnRegisterNewUser</td> 
-  <td>main@1691185247</td>   <td></td> </tr>
-<tr bgcolor="a0b76e">  <td>20/09/01 23:41:31</td>   <td>-157209</td> <td title="&gt;&gt;MyStoresTest.fncreateTestReultFolder()[pri:0, instance:framework.javaframework.MyStoresTest@5e316c74]">&gt;&gt;fncreateTestReultFolder</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1691185247</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>20/09/07 22:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyStoresTest.closeBrowsers()[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&lt;&lt;closeBrowsers</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>20/09/07 22:05:10</td>   <td>-20470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.fnCreateNewAccoount(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">fnCreateNewAccoount</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>20/09/07 22:04:55</td>   <td>-35096</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyStoresTest.fnLaunchBrowser(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&gt;&gt;fnLaunchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>20/09/07 22:04:55</td>   <td>-35146</td> <td title="&gt;&gt;MyStoresTest.fncreateTestReultFolder()[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&gt;&gt;fncreateTestReultFolder</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>20/09/07 22:05:18</td>   <td>-12651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.printdata(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">printdata</td> 
+  <td>main@1353070773</td>   <td></td> </tr>
 </table>
