--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7c69f">  <td>20/09/05 19:22:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyStoresTest.closeBrowsers()[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&lt;&lt;closeBrowsers</td> 
+<tr bgcolor="f69090">  <td>20/09/13 18:22:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyStoresTest.closeBrowsers()[pri:0, instance:framework.javaframework.MyStoresTest@5d066c7d]">&lt;&lt;closeBrowsers</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a7c69f">  <td>20/09/05 19:22:42</td>   <td>-612</td> <td title="&gt;&gt;MyStoresTest.fncreateTestReultFolder()[pri:0, instance:framework.javaframework.MyStoresTest@3967e60c]">&gt;&gt;fncreateTestReultFolder</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@288994035</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>20/09/13 18:22:31</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.fnCreateNewAccoount(java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@5d066c7d]">fnCreateNewAccoount</td> 
+  <td>main@1839962989</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>20/09/13 18:22:31</td>   <td>-60</td> <td title="&gt;&gt;MyStoresTest.fncreateTestReultFolder()[pri:0, instance:framework.javaframework.MyStoresTest@5d066c7d]">&gt;&gt;fncreateTestReultFolder</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1839962989</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>20/09/13 18:22:31</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyStoresTest.printdata(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:framework.javaframework.MyStoresTest@5d066c7d]">printdata</td> 
+  <td></td>   <td></td> </tr>
 </table>
